--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "pantheon-systems/example-drops-8-composer",
-    "description": "Install drops-8 with Composer on Pantheon.",
+    "name": "wri/wri-starter-kit",
+    "description": "Install profile based on drops-8 with Composer on Pantheon.",
     "type": "project",
     "license": "MIT",
     "repositories": [
