--- a/composer.json
+++ b/composer.json
@@ -154,7 +154,7 @@
         "enable-patching": true,
         "build-env": {
             "install-cms": [
-                "drush site-install wri_sites --account-mail=info@wri.org --account-name=wri-admin --site-mail=info@wri.org --site-name=WRI --yes"
+                "drush site-install wri_sites --account-mail={account-mail} --account-name={account-name} --account-pass={account-pass} --site-mail={site-mail} --site-name={site-name} --yes"
             ],
             "export-configuration": "drush config-export --yes"
         },
