--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": "~7.3",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.0",
         "drupal/config_direct_save": "^1.0",
@@ -53,13 +53,19 @@
         "drupal/console": "^1",
         "drupal/core-composer-scaffold": "^8.8.1",
         "drupal/core-recommended": "^8.8",
+        "drupal/migrate_plus": "^5.1",
+        "drupal/migrate_tools": "^5.0",
+        "drupal/migrate_upgrade": "^3.2",
+        "drupal/term_merge": "^1.0@alpha",
+        "drupal/token": "1.8",
         "drush-ops/behat-drush-endpoint": "^9.3",
         "drush/drush": "^10.3",
+        "michelf/php-markdown": "^1.9",
         "pantheon-systems/drupal-integrations": "^8",
         "pantheon-systems/quicksilver-pushback": "^2",
         "rvtraveller/qs-composer-installer": "^1.1",
-        "wri/wri_sites": "^8.9",
-        "zaporylie/composer-drupal-optimizations": "^1.0"
+        "wri/wri_sites": "^v1.0",
+        "zaporylie/composer-drupal-optimizations": "^1.1"
     },
     "require-dev": {
         "behat/behat": "3.*",
@@ -69,7 +75,12 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "dmore/behat-chrome-extension": "^1.3",
         "drupal/coder": "^8.3.1",
+        "drupal/config_devel": "1.7.0",
+        "drupal/config_suite": "^1.4",
+        "drupal/devel": "^4.0",
         "drupal/drupal-extension": "~3",
+        "drupal/field_tools": "^1.0@alpha",
+        "drupal/stage_file_proxy": "^1.0",
         "genesis/behat-fail-aid": "^2.1",
         "jcalderonzumba/gastonjs": "^1.0.2",
         "jcalderonzumba/mink-phantomjs-driver": "^0.3.1",
