--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
           # Set TERMINUS_ENV and related environment variables.
           # https://github.com/pantheon-systems/docker-build-tools-ci/blob/6.x/scripts/set-environment
           name: setup-environment-vars
-          command: /build-tools-ci/scripts/set-environment
+          command: ./.ci/build/multidev-save
 
       - run:
           name: clone-bash-env
@@ -92,7 +92,7 @@ jobs:
           # Set TERMINUS_ENV and related environment variables.
           # https://github.com/pantheon-systems/docker-build-tools-ci/blob/6.x/scripts/set-environment
           name: setup-environment-vars
-          command: /build-tools-ci/scripts/set-environment
+          command: ./.ci/build/multidev-save
 
       - run:
           name: run static tests
@@ -119,7 +119,7 @@ jobs:
           # Set TERMINUS_ENV and related environment variables.
           # https://github.com/pantheon-systems/docker-build-tools-ci/blob/6.x/scripts/set-environment
           name: setup-environment-vars
-          command: /build-tools-ci/scripts/set-environment
+          command: ./.ci/build/multidev-save
 
       - run:
           name: run PHP build step
@@ -150,7 +150,7 @@ jobs:
           # Set TERMINUS_ENV and related environment variables.
           # https://github.com/pantheon-systems/docker-build-tools-ci/blob/6.x/scripts/set-environment
           name: setup-environment-vars
-          command: /build-tools-ci/scripts/set-environment
+          command: ./.ci/build/multidev-save
 
       # Rsync the build artifact pieces web directory
       - run:
