--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ web/sites/*/settings.local.php
 web/sites/*/services*.yml
 !web/sites/*/services.pantheon.*.yml
 !web/sites/*/services.yml
+!web/sites/*/services.dev.yml
 
 # Ignore SimpleTest multi-site environment.
 web/sites/simpletest
