--- a/pantheon.yml
+++ b/pantheon.yml
@@ -1,7 +1,9 @@
 api_version: 1
 drush_version: 10
+database:
+  version: 10.4
 web_docroot: true
-php_version: 7.3
+php_version: 7.4
 enforce_https: transitional
 workflows:
   sync_code:
