--- a/composer.json
+++ b/composer.json
@@ -45,45 +45,31 @@
         }
     ],
     "require": {
-        "php": "~7.3",
+        "php": ">=7.4",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.0",
-        "drupal/config_direct_save": "^1.0",
-        "drupal/config_installer": "^1.0",
-        "drupal/console": "^1",
-        "drupal/migrate_plus": "^5.1",
-        "drupal/migrate_tools": "^5.0",
-        "drupal/migrate_upgrade": "^3.2",
-        "drupal/term_merge": "^1.0@alpha",
-        "drupal/token": "1.8",
-        "drush-ops/behat-drush-endpoint": "^9.3",
-        "drush/drush": "^10.3",
-        "michelf/php-markdown": "^1.9",
-        "pantheon-systems/drupal-integrations": "^8",
+        "drupal/config_direct_save": "^2.1",
+        "drupal/migrate_plus": "^6.0",
+        "drupal/migrate_tools": "^6.0",
+        "drupal/migrate_upgrade": "^4.0",
+        "drupal/term_merge": "^2.0@beta",
+        "drupal/views_arg_order_sort": "dev-1.x#5d13cfca5749294d127ebc06348827f775342b37",
+        "drush/drush": "^10.6",
+        "pantheon-systems/drupal-integrations": "^9.0",
         "pantheon-systems/quicksilver-pushback": "^2",
         "rvtraveller/qs-composer-installer": "^1.1",
         "wri/wri_sites": "^9.0",
-        "zaporylie/composer-drupal-optimizations": "^1.1"
+        "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
-        "behat/behat": "3.*",
-        "behat/mink": "^1.7",
-        "behat/mink-extension": "^2.2",
-        "behat/mink-goutte-driver": "^1.2",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-        "dmore/behat-chrome-extension": "^1.3",
         "drupal/coder": "^8.3.1",
-        "drupal/config_devel": "1.7.0",
         "drupal/config_suite": "^1.4",
         "drupal/devel": "^4.0",
-        "drupal/drupal-extension": "~3",
         "drupal/field_tools": "^1.0@alpha",
         "drupal/stage_file_proxy": "^1.0",
-        "genesis/behat-fail-aid": "^2.1",
         "jcalderonzumba/gastonjs": "^1.0.2",
-        "jcalderonzumba/mink-phantomjs-driver": "^0.3.1",
         "mikey179/vfsstream": "^1.2",
-        "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "^3.4.0",
         "symfony/css-selector": "^2.8"
     },
@@ -108,6 +94,12 @@
             "./vendor/bin/phpcs --standard=Drupal --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --ignore=node_modules,bower_components,vendor ./web/themes/custom",
             "./vendor/bin/phpcs --standard=DrupalPractice --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --ignore=node_modules,bower_components,vendor ./web/modules/custom",
             "./vendor/bin/phpcs --standard=DrupalPractice --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --ignore=node_modules,bower_components,vendor ./web/themes/custom"
+        ],
+        "code-sniff-fix": [
+            "./vendor/bin/phpcbf --standard=Drupal --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --ignore=node_modules,bower_components,vendor ./web/modules/custom",
+            "./vendor/bin/phpcbf --standard=Drupal --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --ignore=node_modules,bower_components,vendor ./web/themes/custom",
+            "./vendor/bin/phpcbf --standard=DrupalPractice --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --ignore=node_modules,bower_components,vendor ./web/modules/custom",
+            "./vendor/bin/phpcbf --standard=DrupalPractice --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md --ignore=node_modules,bower_components,vendor ./web/themes/custom"
         ],
         "unit-test": "echo 'No unit test step defined.'",
         "prepare-for-pantheon": "DrupalProject\\composer\\ScriptHandler::prepareForPantheon",
@@ -162,7 +154,7 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "platform": {
-            "php": "7.3"
+            "php": "7.4"
         },
         "allow-plugins": {
             "composer/installers": true,
