--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": "^7.4",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.0",
         "drupal/config_direct_save": "^2.1",
@@ -64,7 +64,7 @@
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
         "drupal/coder": "^8.3.1",
-        "drupal/config_suite": "^1.4",
+        "drupal/config_suite": "^2.0",
         "drupal/devel": "^4.0",
         "drupal/field_tools": "^1.0@alpha",
         "drupal/stage_file_proxy": "^1.0",
