--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         "pantheon-systems/drupal-integrations": "^9.0",
         "pantheon-systems/quicksilver-pushback": "^2",
         "rvtraveller/qs-composer-installer": "^1.1",
-        "wri/wri_sites": "^9.0",
+        "wri/wri_sites": "dev-circle",
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
