--- a/composer.json
+++ b/composer.json
@@ -145,9 +145,8 @@
         "enable-patching": true,
         "build-env": {
             "install-cms": [
-                "drush site-install wri_sites --account-mail={account-mail} --account-name={account-name} --account-pass={account-pass} --site-mail={site-mail} --site-name={site-name} --yes"
+                "drush site-install wri_sites --account-mail={account-mail} --account-name={account-name} --account-pass={account-pass} --site-mail={site-mail} --site-name={site-name} --yes && drush en wri_package -y && drush en wri_package2 -y"
             ],
-            "enable-modules": "drush en wri_package -y && drush en wri_package2 -y",
             "export-configuration": "drush config-export --yes"
         },
         "drupal-scaffold": {
