Only run scheduled update checks on Thursdays.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,7 +229,7 @@ workflows:
   scheduled_update_check:
     triggers:
        - schedule:
-           cron: "0 0 * * *"
+           cron: "0 0 * * 4"
            filters:
              branches:
               only:
