--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,8 @@
         "jcalderonzumba/gastonjs": "^1.0.2",
         "mikey179/vfsstream": "^1.2",
         "squizlabs/php_codesniffer": "^3.4.0",
-        "symfony/css-selector": "^2.8"
+        "symfony/css-selector": "^2.8",
+        "thinkshout/robo-drupal": "4.x-dev"
     },
     "conflict": {
             "drupal/drupal": "*"
@@ -151,7 +152,8 @@
         },
         "drupal-scaffold": {
             "allowed-packages": [
-                "pantheon-systems/drupal-integrations"
+                "pantheon-systems/drupal-integrations",
+                "thinkshout/robo-drupal"
             ],
             "locations": {
                 "web-root": "./web"
@@ -159,6 +161,9 @@
             "file-mapping": {
                 "[project-root]/.editorconfig": false
             }
+        },
+        "patchLevel": {
+            "drupal\/core": "-p2"
         }
     },
     "config": {
