Adding the .env file to the gitigore.

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ web/sites/default/files
 
 # Pantheon commits a settings.php for environment-specific settings.
 # Place local settings in settings.local.php
+.env
 web/sites/*/settings.local.php
 web/sites/*/services*.yml
 !web/sites/*/services.pantheon.*.yml
