--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
         "mikey179/vfsstream": "^1.2",
         "squizlabs/php_codesniffer": "^3.4.0",
         "symfony/css-selector": "^2.8",
-        "thinkshout/robo-drupal": "4.x-dev"
+        "thinkshout/drupal-integrations": "^1.0",
+        "thinkshout/robo-drupal": "^4.0"
     },
     "conflict": {
             "drupal/drupal": "*"
@@ -94,6 +95,11 @@
     "autoload": {
         "classmap": [
             "scripts/composer/ScriptHandler.php"
+        ]
+    },
+    "autoload-dev": {
+        "files": [
+            "load.environment.php"
         ]
     },
     "scripts": {
@@ -153,6 +159,7 @@
         "drupal-scaffold": {
             "allowed-packages": [
                 "pantheon-systems/drupal-integrations",
+                "thinkshout/drupal-integrations",
                 "thinkshout/robo-drupal"
             ],
             "locations": {
