--- a/pantheon.yml
+++ b/pantheon.yml
@@ -13,3 +13,7 @@ workflows:
       - type: webphp
         description: Push changes back to GitHub if needed
         script: private/scripts/quicksilver/quicksilver-pushback/push-back.php
+protected_web_paths:
+  - /autodiscover/autodiscover.xml
+  - /AutoDiscover/autodiscover.xml
+  - /wp-login.php
