--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.0",
         "drupal/config_direct_save": "^2.1",
+        "drupal/config_split": "^2.0",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_tools": "^6.0",
         "drupal/migrate_upgrade": "^4.0",
