Removing unneeded packages.

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "drupal/migrate_upgrade": "^4.0",
         "drupal/term_merge": "^2.0@beta",
         "drush/drush": "^12.4",
-        "mglaman/composer-drupal-lenient": "*",
+        "mglaman/composer-drupal-lenient": "^1.0",
         "pantheon-systems/drupal-integrations": "^10.0",
         "pantheon-systems/quicksilver-pushback": "^2.1",
         "rvtraveller/qs-composer-installer": "^1.2",
@@ -62,7 +62,6 @@
         "drupal/devel": "^5.1",
         "drupal/field_tools": "^1.0@alpha",
         "drupal/stage_file_proxy": "^2.1",
-        "drupal/upgrade_status": "^4.0",
         "mglaman/drupal-check": "^1.4",
         "phpcompatibility/php-compatibility": "^9.3",
         "phpspec/prophecy-phpunit": "^2.1",
