--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "pantheon-systems/drupal-integrations": "^10.0",
         "pantheon-systems/quicksilver-pushback": "^2.1",
         "rvtraveller/qs-composer-installer": "^1.2",
-        "wri/wri_sites": "dev-d10-upgrade",
+        "wri/wri_sites": "^10.0",
         "zaporylie/composer-drupal-optimizations": "^1.2"
     },
     "require-dev": {
